--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -64,9 +64,37 @@ datasets::trees |>
   ggplot(aes(x = Height, fill = Height)) +
   geom_bar()
 
-
 ```
 
+```{r}
+
+library(palmerpenguins)
+
+ggplot(data = penguins,
+       aes(x = flipper_length_mm,
+           y = body_mass_g)) +
+  geom_point(aes(color = species,
+                 shape = species),
+             size = 8,
+             alpha = 0.8) +
+  scale_color_manual(values = c("orange", "darkorange", "darkorange1")) +
+  labs(
+    title = "Penguin size, Palmer Station LTER",
+    subtitle = "Flipper length and body mass for Adelie, Chinstrap and Gentoo Penguins",
+    x = "Flipper length (i think)",
+    y = "Body mass (i think)",
+    color = "Penguin species",
+    shape = "Penguin species"
+  ) +
+  theme_minimal() +
+  theme(
+    legend.position = c(0.7, 0.9),
+    plot.title.position = "plot",
+    plot.caption = element_text(hjust = 0, face = "bold"),
+    plot.caption.position = "plot"
+  )
+
+```
 
 Some of our data is of penguins (@fig-bills), from @palmerpenguins.
 
